# stem-branch

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  publication-venues.md  tsup.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release-npm.yml  rust.yml
almanac/: package-lock.json  package.json
almanac/tests/: unified-chart.test.tsx
docs/: accuracy.md  da-liu-ren.md  getting-started.md  index.md  mystery-gates.md  qimen-dunjia-research.md  research-da-liu-ren-monthly-generals.md  research-zwds-intercalary-month.md  seven-governors.md  technical-notes.md  validation.md  zi-wei.md
docs/.vitepress/: config.ts
docs/algorithms/: four-pillars.md  lunar-calendar.md  lunisolar-calendar.md  overview.md  solar-longitude.md
docs/api/: astronomy.md  seven-governors.md  timezone.md
docs/plans/: 2026-03-01-expansion-design.md  2026-03-01-expansion-plan.md
docs/reference/: almanac-flags.md  day-fitness.md  deity-directions.md  virtue-stars.md
docs/research/: accuracy-review-report.md  chinese-almanac-authorities.md  choi-chan-po-tong-research.md  qimen-dunjia-references.md  qizheng-siyu-modern-resurgence.md  sexagenary-cycle-astronomical-origins.md  shared-chart-problem-gongpan.md  silk-road-astronomy.tex  when-the-stars-disagree.tex  why-your-chinese-metaphysics-app-gives-wrong-results.tex  xieji-sanming-shensha-references.md  (+1 more)
rust/: Cargo.toml  README.md  deny.toml
rust/src/: delta_t.rs  elpmpp02_data.rs  julian.rs  lib.rs  lunisolar.rs  moon.rs  names.rs  new_moon.rs  nutation_data.rs  solar_terms.rs  vsop87d_earth.rs
rust/tests/: de441_oracle.rs  delta_t_boundary.rs  hko_oracle.rs  jpl_lunar_phase.rs  lunisolar_oracle.rs  moon_oracle.rs  moon_phase.rs  name_labels.rs  npm_parity.rs
rust/tests/data/: README.md  hko_lunisolar.txt  jpl_lunar_phases.txt  npm_golden.txt
scripts/: 4way-planet-comparison.mjs  gen-cnlunar-fixture.py  gen-hko-fixture.mjs  gen-jpl-phases-rust.mjs  gen-npm-golden.mjs  gen-rust-solar-data.mjs  gen-tz-data.mjs  generate-lunar-fixtures.mjs  generate-planet-fixtures.mjs  generate-sweph-fixtures.mjs  jpl-3way-solar-terms.mjs  long-range-analysis.mjs  restructure-paper.py
src/: almanac-flags.ts  astro.ts  birth-chart-analysis.ts  birth-chart-types.ts  birth-chart.ts  branch-relations.ts  chinese-zodiac.ts  cities.ts  cli.ts  cycle-elements.ts  daily-almanac.ts  day-clash.ts  day-fitness.ts  deity-directions.ts  delta-t.ts  dignity-tables.ts  duty-deity.ts  earth-types.ts  eclipse-data.ts  eclipses.ts  fetal-deity.ts  flying-stars.ts  four-pillars.ts  hidden-harmony.ts  hidden-stems.ts  index.ts  julian-day.ts  luck-pillars.ts  lunar-calendar.ts  lunar-mansions.ts  lunisolar-calendar.ts  mystery-gates.ts  new-moon.ts  peng-zu.ts  polaris.ts  qimen-chuanren.ts  salary-star.ts  sidereal-astrology.ts  sign-metadata.ts  six-ren.ts  (+18 more)
tests/: almanac-flags.test.ts  astro.test.ts  birth-chart-analysis.test.ts  branch-relations.test.ts  cities.test.ts  cli.test.ts  cross-validation.test.ts  cycle-elements.test.ts  daily-almanac.test.ts  day-clash.test.ts  day-fitness.test.ts  deity-directions.test.ts  delta-t-boundary.test.ts  delta-t.test.ts  duty-deity.test.ts  earth-types.test.ts  exports-ephemeris.test.ts  fetal-deity.test.ts  four-pillars.test.ts  generate-reference-data.mjs  hidden-harmony.test.ts  hidden-stems.test.ts  luck-pillars.test.ts  lunar-mansions.test.ts  lunisolar-calendar.test.ts  lunisolar-cnlunar.test.ts  lunisolar-hko.test.ts  moon-phase.test.ts  moon-validation.test.ts  moon.test.ts  mystery-gates.test.ts  name-labels.test.ts  new-moon-conjunction.test.ts  new-moon.test.ts  peng-zu.test.ts  planet-validation.test.ts  pluto.test.ts  salary-star.test.ts  seven-governors.test.ts  six-ren.test.ts  (+13 more)
(+99 files in other folders)
