[package]
name = "stembranch-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
description = "Native Rust port of stem-branch's solar ephemeris core (full VSOP87D Earth series + JPL DE441-fitted correction + IAU2000B nutation)."
repository = "https://github.com/h4x0r/stem-branch"
keywords = ["astronomy", "vsop87", "ephemeris", "sun", "de441"]
categories = ["science", "mathematics"]

[lib]
name = "stembranch"
